minor changes in style colors
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3194 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNGDevel/templates/bluedot/style.css
+++ b/cpgNGDevel/templates/bluedot/style.css
@@ -326,10 +326,19 @@ td.filmImg {
   padding-left: 5px;
 }
 
+span#reply_comment a {
+  color: #AA0000;
+  text-decoration: none;
+}
+
+span#reply_comment a:hover {
+   color: #FFF;
+   
+}
+
 .image {
   border: 3px solid #FFFFFF;
 }
-
 /*
 .navmenu {
   font-family: Verdana, Arial, Helvetica, sans-serif;
