added the footer class
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3195 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpgNGDevel/templates/bluedot/style.css
+++ b/cpgNGDevel/templates/bluedot/style.css
@@ -528,3 +528,17 @@ a.sortorder_options {
   text-decoration: underline;
   font-weight: bold;
 }
+
+.footer {
+        font-size : 9px;
+}
+
+.footer a {
+        text-decoration: none;
+        color: #153E7E;
+}
+
+.footer a:hover {
+        color: #000000;
+        text-decoration: underline;
+}
