--- a/cpgNGDevel/templates/chocolate/style.css
+++ b/cpgNGDevel/templates/chocolate/style.css
@@ -532,3 +532,17 @@ a.sortorder_options {
   text-decoration: underline;
   font-weight: bold;
 }
+
+.footer {
+        font-size : 9px;
+}
+
+.footer a {
+        text-decoration: none;
+		color: #8A4117;
+}
+
+.footer a:hover {
+        color: #000000;
+        text-decoration: underline;
+}
