Added breadcrumb to config section of documentation
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3205 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/docs/style.css
+++ b/devel/docs/style.css
@@ -268,7 +268,7 @@ hr {
         border-left: #000000 0px solid;
         border-bottom: #000000 0px solid;
         height: 0px;
-        width: 80%;
+        width: 98%;
         text-align: left;
 }
 
@@ -421,4 +421,14 @@ dt {
         padding-right: 10px;
         padding-bottom: 10px;
         padding-left: 10px;
+}
+
+.indent {
+        margin-left:20px;
+}
+
+. navlocator {
+        font-size:0.8em;
+        color: #0E72A4;
+        font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
 }
