--- a/cpgNGDevel/templates/tan/style.css
+++ b/cpgNGDevel/templates/tan/style.css
@@ -439,6 +439,13 @@ a.sortorder_options {
   font-size: 14px;
 }
 
+.listbox {
+        font-family: Verdana, Arial, Arial, Helvetica, sans-serif;
+        font-size: 100%;
+        border: 1px solid #F4F1EA;
+        vertical-align : middle;
+}
+
 .listbox_lang {
   color: #000000;
   background-color: #F4F1EA;
