--- a/devel/themes/eyeball/style.css
+++ b/devel/themes/eyeball/style.css
@@ -18,6 +18,7 @@
 
 /* Colors used in this style sheet:
    Hex 000000 = RBG   0,   0,   0 = black
+   Hex 181818 = RGB  24,  24,  24 = light black
    Hex 666666 = RBG 102, 102, 102 = light black
    Hex 999999 = RBG 153, 153, 153 = dark grey
    Hex BDBEBD = RBG 189, 190, 189 = medium grey
@@ -69,6 +70,13 @@ body { background-color: #000000; }
 .tableh2, .catrow_noalb, .tableh2_compact, .tablef, .img_caption_table th {         background : #000000 ; }
 
 .tableb, .catrow, .tableb_compact, .thumbnails, .img_caption_table td { background : #000000 ; }
+
+/* This class will be used in conjunction with class tableb: attributes not particularly (re)-assigned will be taken into account from tableb. */
+/* It is being used to accomplish alternating row colors for lists. */
+/* It's recommended to only assign another background color that slightly differs from the one defined in tableb */
+.tableb_alternate {
+        background: #181818;
+}
 
 
 /* Borders for input controls */
