--- a/devel/themes/rainy_day/style.css
+++ b/devel/themes/rainy_day/style.css
@@ -217,6 +217,13 @@ a:hover {
         padding-left: 10px;
 }
 
+/* This class will be used in conjunction with class tableb: attributes not particularly (re)-assigned will be taken into account from tableb. */
+/* It is being used to accomplish alternating row colors for lists. */
+/* It's recommended to only assign another background color that slightly differs from the one defined in tableb */
+.tableb_alternate {
+        background: #DEDEDE;
+}
+
 .tableb_compact {
         background: #C2C9D3 ;
         padding-top: 2px;
