--- a/devel/docs/screen.css
+++ b/devel/docs/screen.css
@@ -377,38 +377,6 @@ dt {
         margin-left: 30px;
 }
 
-.maintable {
-        border: 1px solid #0E72A4;
-        background-color: #efefef;
-        margin-top: 1px;
-        margin-bottom: 1px;
-}
-
-.tableh1 {
-        background : #0E72A4 ;
-        color : #FFFFFF;
-        padding-top: 3px;
-        padding-right: 10px;
-        padding-bottom: 3px;
-        padding-left: 10px;
-}
-
-.tableb {
-        background: #EFEFEF ;
-        padding-top: 3px;
-        padding-right: 10px;
-        padding-bottom: 3px;
-        padding-left: 10px;
-}
-
-.tablef {
-        background: #D1D7DC;
-        padding-top: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
-}
-
 .indent {
         margin-left:20px;
 }
@@ -417,4 +385,9 @@ dt {
         font-size:0.8em;
         color: #0E72A4;
         font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+}
+
+.floatleft {
+        float:left;
+        margin-right:10px
 }
