--- a/devel/themes/water_drop/style.css
+++ b/devel/themes/water_drop/style.css
@@ -441,7 +441,19 @@ a:hover {
         text-decoration: underline;
 }
 
-td #admin_menu_anim {
+.admin_float {
+        float:left;
+        margin-left: 1px;
+        margin-right: 1px;
+        margin-top: 1px;
+        margin-bottom: 1px;
+}
+
+.admin_float_end {
+        clear:left;
+}
+
+#admin_menu_anim {
         background-image : url(images/button_bg_anim.gif);
 }
 
