Improved stats page
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3453 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/docs/screen.css
+++ b/devel/docs/screen.css
@@ -16,10 +16,14 @@
   $Date: 2006-12-27 10:06:19 +0100 (Mi, 27 Dez 2006) $
 **********************************************/
 
-body {
+html > body {
         font-size: .7em;
         background: #F7F7F7;
         margin: 10px 20px;
+}
+
+table {
+        font-size: 1em;
 }
 
 h1 {
@@ -337,7 +341,8 @@ a.external {
         border-right: #999999 1px solid;
         padding-right: 5px;
         border-top: #999999 1px solid;
-        padding-left: 5px; font-size: 12px;
+        padding-left: 5px;
+        font-size: 12px;
         padding-bottom: 5px; margin: 10px 10px 0px 0px;
         border-left: #999999 1px solid;
         padding-top: 5px;
