Added admin block for advanced administration purposes (work in progress). Moved credits section to bottom of templates.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3462 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/themes/rainy_day/style.css
+++ b/devel/themes/rainy_day/style.css
@@ -528,7 +528,7 @@ a:active .image{
 
 .footer a {
         text-decoration: none;
-        color: #758698;
+        color: black;
 }
 
 .footer a:hover {
