--- a/cpg1.5.x/docs/screen.css
+++ b/cpg1.5.x/docs/screen.css
@@ -61,7 +61,7 @@ p {
 }
 
 li {
-        margin: 10px 5px 5px 15px;
+        margin: 0px 5px 5px 15px;
         padding: 0;
         list-style-position: outside;
         list-style-type: disc;
@@ -190,27 +190,55 @@ ul {
         padding-right: 0px;
         padding-left: 0px;
         padding-bottom: 0px;
-        margin: 10px 0px 10px 5px;
+        margin: 0px 0px 10px 5px;
         padding-top: 0px
+}
+
+#toc {
+        border:1px solid #C9C9C9;
+        background-color:#E8E8E8;
+        display:block;
+        float:left;
+        width:350px;
+        margin-right:30px;
+        margin-top:5xp;
+        margin-bottom:30px;
+        padding:2px;
 }
 
 #toc a {
         font-size: .9em;
 }
 
+#toc li {
+        padding-right: 0px;
+        margin-top: 0px;
+        padding-left: 0px;
+        list-style-position: outside;
+        margin-bottom: 5px;
+        padding-bottom: 0px;
+        margin-left: 0px;
+        padding-top: 0px;
+        list-style-type: none;
+}
+
 #toc ul.level1 {
         padding-right: 0px;
         padding-left: 0px;
         padding-bottom: 0px;
-        margin: 10px 5px 0 0;
-        padding-top: 0
+        margin: 0px 5px 0 0;
+        padding-top: 0;
+}
+
+#toc ul.level2,level3,level4 {
+        display:none;
 }
 
 ul.level1 {
         padding-right: 0px;
         padding-left: 0px;
         padding-bottom: 0px;
-        margin: 20px 5px 0 0;
+        margin: 0px 5px 0 0;
         padding-top: 0;
 }
 
@@ -219,7 +247,7 @@ ul.level2 {
         margin-bottom:0;
         list-style-type:none;
         padding: 0;
-        margin-left: 20px;
+        margin-left: 10px;
 }
 
 ul.level3 {
@@ -227,7 +255,7 @@ ul.level3 {
         margin-bottom: 0;
         list-style-type: none;
         padding: 0;
-        margin-left: 35px;
+        margin-left: 15px;
 }
 
 ul.level4 {
@@ -235,19 +263,7 @@ ul.level4 {
         margin-bottom: 0;
         list-style-type: none;
         padding: 0;
-        margin-left: 50px;
-}
-
-.level1, .level2, .level3, .level4 li {
-        padding-right: 0px;
-        margin-top: 0px;
-        padding-left: 0px;
-        list-style-position: outside;
-        margin-bottom: 5px;
-        padding-bottom: 0px;
-        margin-left: 10px;
-        padding-top: 0px;
-        list-style-type: none;
+        margin-left: 20px;
 }
 
 #manual h1 {
@@ -391,4 +407,8 @@ dt {
 .floatleft {
         float:left;
         margin-right:10px
+}
+
+.prev_next {
+        font-size:0.8em;
 }
