Added various minor documentation improvements
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3509 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/docs/screen.css
+++ b/cpg1.5.x/docs/screen.css
@@ -277,7 +277,7 @@ hr {
         border-left: #000000 0px solid;
         border-bottom: #000000 0px solid;
         height: 0px;
-        width: 98%;
+        width: 200px;
         text-align: left;
 }
 
