Changed picture title and description from regular text to header formating for search engine friendliness (dynamic textual content getting more relevance)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3529 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/hardwired/style.css
+++ b/cpg1.5.x/themes/hardwired/style.css
@@ -686,6 +686,36 @@ a:active .image{
         vertical-align : middle;
 }
 
+.pic_title {
+        color: #AEAEAE;
+        font-size: 100%;
+        font-family: Verdana, Helvetica, sans-serif;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.pic_caption {
+        color: #AEAEAE;
+        font-size: 100%;
+        font-family: Verdana, Helvetica, sans-serif;
+        font-weight:normal;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+        background-image: none;
+        background-repeat : no-repeat;
+        background-position : left;
+        padding-left : 0px;
+}
+
 #vanity a {
         display:block;
         width:57px;
