--- a/cpg1.5.x/themes/water_drop/style.css
+++ b/cpg1.5.x/themes/water_drop/style.css
@@ -640,6 +640,31 @@ a:active .image{
         vertical-align : middle;
 }
 
+.pic_title {
+        color: #000666;
+        font-size: 100%;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.pic_caption {
+        color: #000666;
+        font-size: 100%;
+        font-weight:normal;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+        background-image:none;
+}
+
 #vanity a {
         display:block;
         width:57px;
