--- a/cpg1.5.x/themes/classic/style.css
+++ b/cpg1.5.x/themes/classic/style.css
@@ -649,6 +649,33 @@ a:active .image{
         vertical-align : middle;
 
 }
+
+.pic_title {
+        color: #000000;
+        font-size: 120%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.pic_caption {
+        color: #000000;
+        font-size: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
 #vanity a {
         display:block;
         width:57px;
