--- a/cpg1.5.x/themes/eyeball/style.css
+++ b/cpg1.5.x/themes/eyeball/style.css
@@ -722,6 +722,34 @@ a:hover {
 /* End hide from IE-mac */
 
 
+.pic_title {
+        color: #FFFFFF;
+        font-size: 110%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.pic_caption {
+        color: #FFFFFF;
+        font-size: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:normal;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+
+
 #Menu1 {
          position:relative;
          width:780px;
