--- a/cpg1.5.x/themes/fruity/style.css
+++ b/cpg1.5.x/themes/fruity/style.css
@@ -682,6 +682,32 @@ a:active .image{
         margin-top: 5px;
 }
 
+.pic_title {
+        color: #000000;
+        font-size: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.pic_caption {
+        color: #000000;
+        font-size: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:normal;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
 #SELECT_LISTS {
         text-align:center;
 }
