--- a/cpg1.5.x/themes/igames/style.css
+++ b/cpg1.5.x/themes/igames/style.css
@@ -715,6 +715,35 @@ a:hover {
         vertical-align : middle;
 }
 
+.pic_title {
+        color: #C6B78E;
+        font-size: 100%;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        padding-right: 0px;
+        padding-left: 0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.pic_caption {
+        color: #C6B78E;
+        font-size: 100%;
+        font-weight:normal;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        padding-right: 0px;
+        padding-left: 0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+        background-image : none;
+}
+
 #SELECT_LISTS {
         width: 300px;
         height: 50px;
