--- a/cpg1.5.x/themes/mac_ox_x/style.css
+++ b/cpg1.5.x/themes/mac_ox_x/style.css
@@ -669,6 +669,30 @@ a:hover {
         display: inline;
 }
 
+.pic_title {
+        color: #000000;
+        font-size: 100%;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.pic_caption {
+        color: #000000;
+        font-size: 100%;
+        font-weight:normal;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
 #SUB_MENU {
 }
 
