Replaced hard-coded bold tags with corresponding CSS formats
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3548 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/classic/style.css
+++ b/cpg1.5.x/themes/classic/style.css
@@ -190,6 +190,7 @@ a:active {
         padding-right: 10px;
         padding-bottom: 3px;
         padding-left: 10px;
+        font-weight:bold;
 }
 
 .tableh1_compact {
@@ -199,6 +200,7 @@ a:active {
         padding-right: 5px;
         padding-bottom: 2px;
         padding-left: 5px;
+        font-weight:bold;
 }
 
 .tableh2 {
@@ -213,6 +215,7 @@ a:active {
 .tableh2_compact {
         background: #D1D7DC ;
         color : #000000;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -561,6 +564,10 @@ a:active .image{
         text-decoration: underline;
 }
 
+.alblink {
+        font-weight:bold;
+}
+
 .alblink a {
         text-decoration: underline;
         color: #000000;
@@ -574,6 +581,7 @@ a:active .image{
 .catlink {
         display: block;
         margin-bottom: 2px;
+        font-weight:bold;
 }
 
 .catlink a {
@@ -674,6 +682,11 @@ a:active .image{
         margin-top:0px;
         margin-bottom:0px;
         line-height:1.0em;
+}
+
+.cpg_user_message {
+        font-size:1.4em;
+        font-weight:bold;
 }
 
 #vanity a {
