--- a/cpg1.5.x/themes/project_vii/style.css
+++ b/cpg1.5.x/themes/project_vii/style.css
@@ -239,6 +239,7 @@ a:hover {
 .tableh1 {
         background : #BDBDBD ;
         color: #FFFFFF;
+        font-weight:bold;
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
@@ -248,6 +249,7 @@ a:hover {
 .tableh1_compact {
         background : #BDBDBD ;
         color: #FFFFFF;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -266,6 +268,7 @@ a:hover {
 .tableh2_compact {
         background: #E6E6E6 ;
         color : #000000;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -610,6 +613,10 @@ a:active .image{
         text-decoration: underline;
 }
 
+.alblink {
+        font-weight:bold;
+}
+
 .alblink a {
         text-decoration: underline;
         color: #000000;
@@ -623,6 +630,7 @@ a:active .image{
 .catlink {
         display: block;
         margin-bottom: 2px;
+        font-weight:bold;
 }
 
 .catlink a {
@@ -720,6 +728,11 @@ a:active .image{
         margin-bottom:0px;
         line-height:1.0em;
         background-image:none;
+}
+
+.cpg_user_message {
+        font-size:1.4em;
+        font-weight:bold;
 }
 
 #SUB_MENU {
