--- a/cpg1.5.x/themes/rainy_day/style.css
+++ b/cpg1.5.x/themes/rainy_day/style.css
@@ -176,6 +176,7 @@ a:hover {
 .tableh1 {
         background: #66707C ;
         color: #FFFFFF;
+        font-weight:bold;
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
@@ -185,6 +186,7 @@ a:hover {
 .tableh1_compact {
         background: #66707C ;
         color: #FFFFFF;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -203,6 +205,7 @@ a:hover {
 .tableh2_compact {
         background: #A3AAB4 ;
         color: #000000;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -546,6 +549,10 @@ a:active .image{
         text-decoration: underline;
 }
 
+.alblink {
+        font-weight:bold;
+}
+
 .alblink a {
         text-decoration: underline;
         color: #000000;
@@ -559,6 +566,7 @@ a:active .image{
 .catlink {
         display: block;
         margin-bottom: 2px;
+        font-weight:bold;
 }
 
 .catlink a {
@@ -663,6 +671,11 @@ a:active .image{
         margin-top:0px;
         margin-bottom:0px;
         line-height:1.0em;
+}
+
+.cpg_user_message {
+        font-size:1.4em;
+        font-weight:bold;
 }
 
 #vanity a {
