--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -189,6 +189,7 @@ a:active {
         padding-right: 10px;
         padding-bottom: 3px;
         padding-left: 10px;
+        font-weight:bold;
 }
 
 .tableh1_compact {
@@ -198,6 +199,7 @@ a:active {
         padding-right: 5px;
         padding-bottom: 2px;
         padding-left: 5px;
+        font-weight:bold;
 }
 
 .tableh2 {
@@ -212,6 +214,7 @@ a:active {
 .tableh2_compact {
         background: #D1D7DC ;
         color : #000000;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -559,6 +562,10 @@ a:active .image{
         text-decoration: underline;
 }
 
+.alblink {
+        font-weight:bold;
+}
+
 .alblink a {
         text-decoration: underline;
         color: #000000;
@@ -572,6 +579,7 @@ a:active .image{
 .catlink {
         display: block;
         margin-bottom: 2px;
+        font-weight:bold;
 }
 
 .catlink a {
@@ -636,6 +644,37 @@ a:active .image{
 
 .clickable_option {
         cursor : default;
+}
+
+.pic_title {
+        color: #000000;
+        font-size: 120%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.pic_caption {
+        color: #000000;
+        font-size: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight:bold;
+        text-align : center;
+        padding-top:0px;
+        padding-bottom:0px;
+        margin-top:0px;
+        margin-bottom:0px;
+        line-height:1.0em;
+}
+
+.cpg_user_message {
+        font-size:1.4em;
+        font-weight:bold;
 }
 
 .listbox_lang {
