--- a/cpg1.5.x/themes/eyeball/style.css
+++ b/cpg1.5.x/themes/eyeball/style.css
@@ -133,7 +133,7 @@ a:active .image{
 /* Fonts definition */
 body { font-family: Arial, Helvetica, sans-serif; }
 
-.tableh1, .tableh1a, .catlink, .tableh2, .catrow_noalb { font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; }
+.tableh1, .tableh1a, .catlink, .tableh2, .catrow_noalb { font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; font-weight:bold; }
 
 .textinput, .listbox, .radio, .checkbox { font-family: Arial, Helvetica, sans-serif; }
 
@@ -362,6 +362,7 @@ a:hover {
         padding-right: 5px;
         padding-bottom: 2px;
         padding-left: 5px;
+        font-weight:bold;
 }
 
 
@@ -627,6 +628,9 @@ a:hover {
         text-decoration: underline;
 }
 
+.alblink {
+        font-weight:bold;
+}
 
 .alblink a {
         text-decoration: underline;
@@ -641,6 +645,7 @@ a:hover {
 .catlink {
         display: block;
         margin-bottom: 2px;
+        font-weight:bold;
 }
 
 
@@ -748,7 +753,10 @@ a:hover {
         line-height:1.0em;
 }
 
-
+.cpg_user_message {
+        font-size:1.4em;
+        font-weight:bold;
+}
 
 #Menu1 {
          position:relative;
