--- a/cpg1.5.x/themes/hardwired/style.css
+++ b/cpg1.5.x/themes/hardwired/style.css
@@ -202,6 +202,7 @@ a:hover {
 
 .tableh1 {
         background : #4F5964 ;
+        font-weight:bold;
         color : #FFFFFF;
         padding-top: 3px;
         padding-right: 10px;
@@ -211,6 +212,7 @@ a:hover {
 
 .tableh1_compact {
         background : #515B67 ;
+        font-weight:bold;
         color : #CCCCCC;
         padding-top: 2px;
         padding-right: 5px;
@@ -230,6 +232,7 @@ a:hover {
 .tableh2_compact {
         background: #616D7B ;
         color : #CCCCCC;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -571,6 +574,10 @@ a:active .image{
         text-decoration: underline;
 }
 
+.alblink {
+        font-weight:bold;
+}
+
 .alblink a {
         text-decoration: underline;
         color: #EAEAEA;
@@ -584,6 +591,7 @@ a:active .image{
 .catlink {
         display: block;
         margin-bottom: 2px;
+        font-weight:bold;
 }
 
 .catlink a {
@@ -714,6 +722,11 @@ a:active .image{
         background-repeat : no-repeat;
         background-position : left;
         padding-left : 0px;
+}
+
+.cpg_user_message {
+        font-size:1.4em;
+        font-weight:bold;
 }
 
 #vanity a {
