--- a/cpg1.5.x/themes/water_drop/style.css
+++ b/cpg1.5.x/themes/water_drop/style.css
@@ -180,6 +180,7 @@ a:hover {
         font-family:  Verdana, Geneva, Arial, sans-serif;
         background : #8AA5B5 ;
         color: #FFFFFF;
+        font-weight:bold;
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
@@ -190,6 +191,7 @@ a:hover {
         font-family:  Verdana, Geneva, Arial, sans-serif;
         background : #8AA5B5 ;
         color: #FFFFFF;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -208,6 +210,7 @@ a:hover {
 .tableh2_compact {
         background: #CBD7DE ;
         color : #000000;
+        font-weight:bold;
         padding-top: 2px;
         padding-right: 5px;
         padding-bottom: 2px;
@@ -550,6 +553,10 @@ a:active .image{
         text-decoration: underline;
 }
 
+.alblink {
+        font-weight:bold;
+}
+
 .alblink a {
         text-decoration: underline;
         color: #000000;
@@ -563,6 +570,7 @@ a:active .image{
 .catlink {
         display: block;
         margin-bottom: 2px;
+        font-weight:bold;
 }
 
 .catlink a {
@@ -663,6 +671,11 @@ a:active .image{
         margin-bottom:0px;
         line-height:1.0em;
         background-image:none;
+}
+
+.cpg_user_message {
+        font-size:1.4em;
+        font-weight:bold;
 }
 
 #vanity a {
