Improved theme creation section of the docs.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3567 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/docs/screen.css
+++ b/cpg1.5.x/docs/screen.css
@@ -204,6 +204,7 @@ ul {
         margin-top:5xp;
         margin-bottom:30px;
         padding:2px;
+        position:static;
 }
 
 #toc a {
@@ -347,7 +348,7 @@ a.external {
 }
 
 .code {
-        font-size: 12px;
+        /*font-size: 12px;*/
         font-style: normal;
         font-family: "Courier New", Courier, monospace;
         background-color: #E0E0E0;
