Improved theme creation section of the docs.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3569 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/docs/style.css
+++ b/cpg1.5.x/docs/style.css
@@ -62,6 +62,10 @@ p {
         padding-left: 10px;
 }
 
+.tableb_alternate {
+        background: #E4E4E4;
+}
+
 .tablef {
         background: #D1D7DC;
         padding-top: 10px;
