--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -692,6 +692,7 @@ a:active .image{
         height:20px;
         margin: 3px 20px;
 }
+
 #vanity img {border:0}
 #v_php {float:left;background-image:url(../../images/powered-php.gif);}
 #v_php:hover {background-image:url(../../images/h_powered-php.gif);}
@@ -701,3 +702,10 @@ a:active .image{
 #v_xhtml:hover {background-image:url(../../images/h_valid-xhtml10.gif);}
 #v_css {float:right;background-image:url(../../images/valid-css.gif);}
 #v_css:hover{background-image:url(../../images/h_valid-css.gif);}
+
+#cpg_main_block {
+        border: 1px solid #666666;
+        background-color:#FFFFFF;
+        margin:20px;
+        padding:20px;
+}
