Added success/failure message on target page (instead of sending users to redirection page).
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3591 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -686,6 +686,13 @@ a:active .image{
         vertical-align : middle;
 
 }
+
+.cpg_user_message {
+        font-size:1.4em;
+        font-weight:bold;
+        color:red;
+}
+
 #vanity a {
         display:block;
         width:57px;
