Backported parts of the cpg1.5.x documentation for cpg1.4.x
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3658 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.4.x/docs/style.css
+++ b/cpg1.4.x/docs/style.css
@@ -415,6 +415,10 @@ dt {
         padding-left: 10px;
 }
 
+.tableb_alternate {
+        background: #E4E4E4;
+}
+
 .tablef {
         background: #D1D7DC;
         padding-top: 10px;
