--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -7,7 +7,7 @@
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License version 3
   as published by the Free Software Foundation.
-  
+
   ********************************************
   Coppermine version: 1.5.0
   $Source$
@@ -455,6 +455,9 @@ a:active {
         margin-right: 1px;
         margin-top: 1px;
         margin-bottom: 1px;
+        max-height:1.5em;
+        overflow:hidden;
+        width:100px;
 }
 
 .admin_menu_wrapper {
