Re-structured config page for easier translation, separation of logic and content in language files, better usability and increased functionality (work in progress)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3815 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/classic/style.css
+++ b/cpg1.5.x/themes/classic/style.css
@@ -716,3 +716,11 @@ a:active .image{
         margin:20px;
         padding:20px;
 }
+
+.important {
+        background-image : url(images/important.gif);
+        padding-left:1px;
+        padding-right:1px;
+        padding-top:3px;
+        padding-bottom:3px;
+}
