Added class 'important' and corresponding image to allow highlighting of improperly filled out config fields
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3816 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/fruity/style.css
+++ b/cpg1.5.x/themes/fruity/style.css
@@ -761,3 +761,11 @@ a:active .image{
 /* #E7F38C = RGB 239,243,140 = (light green)   */
 /* if you don't like a color, just do a search */
 /* and replace on the hex color...             */
+
+.important {
+        background-image : url(images/important.gif);
+        padding-left:1px;
+        padding-right:1px;
+        padding-top:3px;
+        padding-bottom:3px;
+}
