--- a/cpg1.5.x/themes/project_vii/style.css
+++ b/cpg1.5.x/themes/project_vii/style.css
@@ -784,3 +784,11 @@ a:active .image{
 #v_xhtml:hover {background-image:url(../../images/h_valid-xhtml10.gif);}
 #v_css {float:right;background-image:url(../../images/valid-css.gif);}
 #v_css:hover{background-image:url(../../images/h_valid-css.gif);}
+
+.important {
+        background-image : url(images/important.gif);
+        padding-left:3px;
+        padding-right:3px;
+        padding-top:3px;
+        padding-bottom:3px;
+}
