--- a/cpg1.5.x/themes/water_drop/style.css
+++ b/cpg1.5.x/themes/water_drop/style.css
@@ -696,3 +696,11 @@ a:active .image{
 #v_xhtml:hover {background-image:url(../../images/h_valid-xhtml10.gif);}
 #v_css {float:right;background-image:url(../../images/valid-css.gif);}
 #v_css:hover{background-image:url(../../images/h_valid-css.gif);}
+
+.important {
+        background-image : url(images/important.gif);
+        padding-left:1px;
+        padding-right:1px;
+        padding-top:3px;
+        padding-bottom:3px;
+}
