--- a/cpg1.5.x/docs/style.css
+++ b/cpg1.5.x/docs/style.css
@@ -7,7 +7,7 @@
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License version 3
   as published by the Free Software Foundation.
-  
+
   ********************************************
   Coppermine version: 1.5.0
   $Source$
@@ -73,3 +73,11 @@ p {
         padding-bottom: 10px;
         padding-left: 10px;
 }
+
+.doc_info_wrapper {
+        font-size: 9px;
+        color:#818181;
+        /*border:1px solid #818181;*/
+        text-align:right;
+}
+
