--- a/cpg1.5.x/themes/igames/style.css
+++ b/cpg1.5.x/themes/igames/style.css
@@ -810,3 +810,27 @@ a:hover {
         padding-top:3px;
         padding-bottom:3px;
 }
+
+#social_bookmarks_wrapper {
+        text-align:center;
+        vertical-align:middle;
+        padding-bottom:50px;
+}
+
+#social_bookmarks_text {
+        font-size: 9px;
+        padding-top:2px;
+        /*display:none;*/ /* un-comment to hide the text in front of the social bookmarks */
+}
+
+div.social_bookmarks {
+        float:left;
+        padding-left:2px;
+        padding-right:2px;
+}
+
+#cpgChooseLanguageWrapper {
+}
+
+#cpgChooseThemeWrapper {
+}
