--- a/cpg1.5.x/themes/fruity/style.css
+++ b/cpg1.5.x/themes/fruity/style.css
@@ -769,3 +769,27 @@ a:active .image{
         padding-top:3px;
         padding-bottom:3px;
 }
+
+#social_bookmarks_wrapper {
+        text-align:center;
+        vertical-align:middle;
+        max-width:120px;
+}
+
+#social_bookmarks_text {
+        font-size: 9px;
+        padding-top:2px;
+        display:none;   /* comment out to hide the text in front of the social bookmarks */
+}
+
+div.social_bookmarks {
+        float:left;
+        padding-left:2px;
+        padding-right:2px;
+}
+
+#cpgChooseLanguageWrapper {
+}
+
+#cpgChooseThemeWrapper {
+}
