--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -727,3 +727,31 @@ a:active .image{
         padding-top:3px;
         padding-bottom:3px;
 }
+
+
+#social_bookmarks_wrapper {
+        text-align:center;
+        vertical-align:middle;
+        float:left;
+        padding-left:15px;
+}
+
+#social_bookmarks_text {
+        font-size: 9px;
+        padding-top:2px;
+        /*display:none;*/ /* un-comment to hide the text in front of the social bookmarks */
+}
+
+div.social_bookmarks {
+        float:left;
+        padding-left:2px;
+        padding-right:2px;
+}
+
+#cpgChooseLanguageWrapper {
+        float:left;
+}
+
+#cpgChooseThemeWrapper {
+        float:left;
+}
