Sidebar made themeable
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3997 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/water_drop/style.css
+++ b/cpg1.5.x/themes/water_drop/style.css
@@ -728,3 +728,31 @@ div.social_bookmarks {
 
 #cpgChooseThemeWrapper {
 }
+
+.dtree {
+        color: #000666;
+        white-space: nowrap;
+}
+.dtree img {
+        border: 0px;
+        vertical-align: middle;
+}
+.dtree a {
+        color: #000666;
+        text-decoration: none;
+}
+.dtree a.node, .dtree a.nodeSel {
+        white-space: nowrap;
+        padding: 1px 2px 1px 2px;
+}
+.dtree a.node:hover, .dtree a.nodeSel:hover {
+        color: #000666;
+        text-decoration: underline;
+}
+.dtree a.nodeSel {
+        background-color: #8AA5B5;
+        color: #FFFFFF;
+}
+.dtree .clip {
+        overflow: hidden;
+}
