--- a/cpg1.5.x/themes/hardwired/style.css
+++ b/cpg1.5.x/themes/hardwired/style.css
@@ -801,3 +801,30 @@ div.social_bookmarks {
 
 #cpgChooseThemeWrapper {
 }
+
+.dtree {
+        color: #FFFFFF;
+        white-space: nowrap;
+}
+.dtree img {
+        border: 0px;
+        vertical-align: middle;
+}
+.dtree a {
+        color: #9A9EA4;
+        text-decoration: none;
+}
+.dtree a.node, .dtree a.nodeSel {
+        white-space: nowrap;
+        padding: 1px 2px 1px 2px;
+}
+.dtree a.node:hover, .dtree a.nodeSel:hover {
+        color: #FFFFFF;
+        text-decoration: underline;
+}
+.dtree a.nodeSel {
+        background-color: #5D6674;
+}
+.dtree .clip {
+        overflow: hidden;
+}
