--- a/cpg1.5.x/themes/igames/style.css
+++ b/cpg1.5.x/themes/igames/style.css
@@ -211,7 +211,7 @@ form {
 }
 
 .top_menu_left_bttn a:hover {
-                background: #4A4A4A;
+        background: #4A4A4A;
         background-image : url(images/left_menu_button_over.gif);
         background-position : left;
         background-repeat : no-repeat;
@@ -833,4 +833,33 @@ div.social_bookmarks {
 }
 
 #cpgChooseThemeWrapper {
+}
+
+.dtree {
+        color: #C6B78E;
+        white-space: nowrap;
+}
+.dtree img {
+        border: 0px;
+        vertical-align: middle;
+}
+.dtree a {
+        color: #C6B78E;
+        text-decoration: none;
+}
+.dtree a.node, .dtree a.nodeSel {
+        white-space: nowrap;
+        padding: 1px 2px 1px 2px;
+}
+.dtree a.node:hover, .dtree a.nodeSel:hover {
+        color: #FFFFFF;
+        text-decoration: underline;
+}
+.dtree a.nodeSel {
+        background-image: url(images/tableh1a_bg_middle.gif);
+        border-bottom: 1px solid #000000;
+        color: #C6B78E;
+}
+.dtree .clip {
+        overflow: hidden;
 }
