--- a/cpg1.5.x/themes/mac_ox_x/style.css
+++ b/cpg1.5.x/themes/mac_ox_x/style.css
@@ -798,3 +798,31 @@ div.social_bookmarks {
 
 #cpgChooseThemeWrapper {
 }
+
+.dtree {
+        color: #000000;
+        white-space: nowrap;
+}
+.dtree img {
+        border: 0px;
+        vertical-align: middle;
+}
+.dtree a {
+        color: #000000;
+        text-decoration: none;
+}
+.dtree a.node, .dtree a.nodeSel {
+        white-space: nowrap;
+        padding: 1px 2px 1px 2px;
+}
+.dtree a.node:hover, .dtree a.nodeSel:hover {
+        color: #000000;
+        text-decoration: underline;
+}
+.dtree a.nodeSel {
+        background-image: url(images/tableh1_bg.gif);
+        border: 1px solid #666666;
+}
+.dtree .clip {
+        overflow: hidden;
+}
