Renamed cookie for sidebar to match cpg standards
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4000 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -777,7 +777,8 @@ div.social_bookmarks {
         text-decoration: underline;
 }
 .dtree a.nodeSel {
-        background-color: #c0d2ec;
+        background-color: #0871A5;
+        color: #FFFFFF;
 }
 .dtree .clip {
         overflow: hidden;
