Added separate CSS class for filmstrip thumb that represents actual image
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4102 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/themes/classic/style.css
+++ b/cpg1.5.x/themes/classic/style.css
@@ -483,6 +483,10 @@ a:active {
         margin:2px;
 }
 
+img.middlethumb {
+    border: 5px solid blue;
+}
+
 /* pseudo-classes for image links */
 a:link .image{
         border-style:solid;
