--- a/cpg1.5.x/themes/fruity/style.css
+++ b/cpg1.5.x/themes/fruity/style.css
@@ -489,6 +489,10 @@ a:hover.yebg {
         margin: 2px;
 }
 
+img.middlethumb {
+    border: 5px solid blue;
+}
+
 /* pseudo-classes for image links */
 a:link .image{
         border-style: solid;
